# cpputest_enviroment_test

./: CMakeLists.txt
src/: CMakeLists.txt
src/hello/: CMakeLists.txt
tests/: CMakeLists.txt
